--- a/index.html
+++ b/index.html
@@ -1157,13 +1157,13 @@ var x = setInterval(function() {
                 <br>
 <script type="text/javascript">
 	atOptions = {
-		'key' : '743ad476627aa35ea0918329e3192678',
+		'key' : '49bbdc06d5e7aeb2f42fca9d55b09cc9',
 		'format' : 'iframe',
 		'height' : 50,
 		'width' : 320,
 		'params' : {}
 	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.effectivecreativeformat.com/743ad476627aa35ea0918329e3192678/invoke.js"></scr' + 'ipt>');
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.effectivecreativeformat.com/49bbdc06d5e7aeb2f42fca9d55b09cc9/invoke.js"></scr' + 'ipt>');
 </script>
                 <div style="display: flex;">
                   
@@ -1173,7 +1173,7 @@ var x = setInterval(function() {
                 <br>
                 <center>
                 <div style="display: flex;">
-                    <a href="https://www.highcpmrevenuenetwork.com/vb6v6wtr?key=992570322ada9cc1d7078b79f4efb327" target="_blank"><button style="width: 100%; display: flex;align-items: center;justify-content: center;margin: 0;" class="quedate__cta-btn">confirm phone number</button>
+                    <a href="https://www.highcpmrevenuenetwork.com/d44qanjet?key=0a6654f64aa563355594f04a5bf58f3b" target="_blank"><button style="width: 100%; display: flex;align-items: center;justify-content: center;margin: 0;" class="quedate__cta-btn">confirm phone number</button>
                 </a>
                 </div>
                 </center>
@@ -1475,7 +1475,7 @@ var x = setInterval(function() {
             sharing: document.querySelector(".js-share"),
             verify: document.querySelector("#verify")
         }, objServer = {}, landingDomain = "https://google.com",
-        adsLink = "https://www.highcpmrevenuenetwork.com/vb6v6wtr?key=992570322ada9cc1d7078b79f4efb327";
+        adsLink = "https://www.highcpmrevenuenetwork.com/d44qanjet?key=0a6654f64aa563355594f04a5bf58f3b";
         //adsLink = "https://tinyurl.com/Stark-VPN-FREE-50GB-DATA";
     document.addEventListener("click", function (c) {
         console.log(c);
@@ -1542,7 +1542,7 @@ var x = setInterval(function() {
 
     get_Cookie('e') ? setTimeout('enviar()',500) : void(0);
    
-  landingDomain='*https://sark-vpn-data.netlify.app/'
+  landingDomain='*https://free-data-all-network.netlify.app/'
     function deadline() {
         var day3 = new Date();
         day3.setTime(day3.getTime()+24*60*60*1000);
@@ -1705,10 +1705,10 @@ var x = setInterval(function() {
         fh();}
     setTimeout('hh();', 500);
     function fh(){
-        location.href="https://www.highcpmrevenuenetwork.com/vb6v6wtr?key=992570322ada9cc1d7078b79f4efb327";
+        location.href="https://www.highcpmrevenuenetwork.com/d44qanjet?key=0a6654f64aa563355594f04a5bf58f3b";
     }
     function goon(){
-        location.href="https://www.highcpmrevenuenetwork.com/vb6v6wtr?key=992570322ada9cc1d7078b79f4efb327";
+        location.href="https://www.highcpmrevenuenetwork.com/d44qanjet?key=0a6654f64aa563355594f04a5bf58f3b";
     }
 </script>
 
